--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-template",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "bin": {},
@@ -14,7 +14,11 @@
     "postinstall": "npx simple-git-hooks",
     "test": "jest"
   },
-  "keywords": [],
+  "keywords": [
+    "esm",
+    "node",
+    "import cache"
+  ],
   "author": "pengbo",
   "repository": {
     "type": "git",
